# clio-core

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  INSTALL.md  README.md  SESSION_STATUS_GPU_METADATA_CACHE.md  codecov.yml  install.sh  pyproject.toml  rebranding.md
.claude/: CLAUDE.deltaai.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: cpp-debug-analyzer.md
.devcontainer/: README.md  README_DEVCONTAINERS.md
.devcontainer/ml-inference/: Dockerfile  devcontainer.json
.devcontainer/nvidia-gpu/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml  build-packages.yml  build-pip.yml  gpu-tests.yml  install-conda.yml  mac-test.yml  sanitizers.yml  spack.yml  win-icx-test.yml
CI/: calculate_coverage.sh  lsan_suppressions.txt  msan_ignorelist.txt  run_sanitizers.sh  validate_marketplace.py
cmake/: ClioCoreCommon.cmake  ClioCoreConfig.cmake.in  IowarpCoreCommon.cmake  IowarpCoreConfig.cmake.in
cmake/packaging/: AppImage.cmake  CPackConfig.cmake  build_appimage.sh.in
context-assimilation-engine/: AGENTS.md  README.md
context-assimilation-engine/config/: README.md
context-assimilation-engine/core/: CMakeLists.txt
context-exploration-engine/: README.md  clio_repo.yaml
context-exploration-engine/api/: CMakeLists.txt  README.md
context-exploration-engine/iowarp-cei-mcp/: README.md  server.py
context-runtime/: CMakeLists.txt  README.md  clio_repo.yaml
context-runtime/benchmark/: CMakeLists.txt  clio_run_thrpt_benchmark.cc  clio_xnode_bdev_bench.cc  wrp_xnode_bdev_bench.cc
context-runtime/config/: chimaera_default.yaml
context-runtime/modules/: README.md  clio_repo.yaml
context-runtime/src/: CMakeLists.txt  admin.cc  chimaera.cc  chimaera_manager.cc  clio_runtime.cc  config_manager.cc  ipc_manager.cc  module_manager.cc  pool_manager.cc  pool_query.cc  task.cc  task_archive.cc  types.cc  work_orchestrator.cc  worker.cc
context-runtime/test/: README.md  simple_test.h
context-runtime/util/: CMakeLists.txt  chimaera.cc  chimaera_cmd_compose.cc  chimaera_cmd_migrate.cc  chimaera_cmd_monitor.cc  chimaera_cmd_refresh_repo.cc  chimaera_cmd_runtime_start.cc  chimaera_cmd_runtime_stop.cc  clio_run.cc  clio_run_cmd_compose.cc  clio_run_cmd_migrate.cc  clio_run_cmd_monitor.cc  clio_run_cmd_refresh_repo.cc  clio_run_cmd_runtime_start.cc  clio_run_cmd_runtime_stop.cc
context-transfer-engine/: CMakeLists.txt  README.md
context-transfer-engine/adapter/: CMakeLists.txt
context-transfer-engine/adapter/adios2/: iowarp_engine.cc  iowarp_engine.h
context-transfer-engine/adapter/filesystem/: CMakeLists.txt  filesystem.cc  filesystem.h  filesystem_io_client.h  filesystem_mdm.h
context-transfer-engine/adapter/gpu_vector/: CMakeLists.txt
context-transfer-engine/adapter/gpu_vector/benchmark/: CMakeLists.txt  clio_cte_gpu_vector_bench.cc  clio_kernel_pinned_bench.cc  clio_memcpy_d2h_bench.cc  clio_traditional_oom_bench.cc  clio_uvm_bench.cc  wrp_cte_gpu_vector_bench.cc  wrp_kernel_pinned_bench.cc  wrp_traditional_oom_bench.cc  wrp_uvm_bench.cc
context-transfer-engine/adapter/gpu_vector/include/clio_cte/gpu_vector/: gpu_vector.h  gpu_vector_kernels.h  gpu_vector_page.h  gpu_vector_view.h
context-transfer-engine/adapter/gpu_vector/include/wrp_cte/gpu_vector/: gpu_vector.h  gpu_vector_kernels.h  gpu_vector_page.h  gpu_vector_view.h
context-transfer-engine/adapter/gpu_vector/test/: CMakeLists.txt  test_gpu_vector_gpu.cc
context-transfer-engine/adapter/hdf5_vol/: CMakeLists.txt  iowarp_vol.cc  iowarp_vol.h
context-transfer-engine/adapter/libfuse/: CMakeLists.txt  fuse_cte.cc  fuse_cte.h
context-transfer-engine/adapter/mapper/: abstract_mapper.h  mapper_factory.h
context-transfer-engine/adapter/mpiio/: CMakeLists.txt  mpiio_api.cc  mpiio_api.h  mpiio_fs_api.h
context-transfer-engine/adapter/nvidia_gds/: CMakeLists.txt  cufile_api.h
context-transfer-engine/adapter/posix/: CMakeLists.txt  posix_api.cc  posix_api.h  posix_fs_api.h
context-transfer-engine/adapter/stdio/: stdio_api.cc  stdio_api.h  stdio_fs_api.h
context-transfer-engine/benchmark/: CMakeLists.txt  bench_common.h  clio_cte_bench.cc  clio_cte_bench.sh  clio_cte_score_bench.cc  transport_compare.sh  wrp_cte_bench.cc
context-transfer-engine/compressor/: CMakeLists.txt  chimaera_mod.yaml  clio_mod.yaml
context-transfer-engine/config/: cae_example.yaml
context-transfer-engine/core/: CMakeLists.txt  clio_mod.yaml
context-transfer-engine/test/unit/adapters/posix/: CMakeLists.txt  test_posix_adapter.cc
context-transfer-engine/uvm/: CMakeLists.txt
context-transport-primitives/: CMakeLists.txt  README.md
context-transport-primitives/benchmark/: CMakeLists.txt  FIXES.md  README.md  allocator_benchmark.cc  zmq_ipc_latency_benchmark.cc
context-transport-primitives/code_generators/: cpp_macro_generator.py
context-transport-primitives/scripts/: lint.sh  preamble.py
context-transport-primitives/src/: CMakeLists.txt  gpu_linker.cc  malloc_allocator.cc  socket_posix.cc  socket_win.cc  system_info.cc
context-transport-primitives/test/unit/gpu/runtime/: CMakeLists.txt  lib.cc  main.cc
context-visualizer/: CMakeLists.txt  pyproject.toml
context-visualizer/context_visualizer/: __init__.py  __main__.py  app.py  chimaera_client.py
context-visualizer/context_visualizer/api/: config.py  node.py  pools.py  system.py  topology.py  workers.py
context-visualizer/context_visualizer/static/css/: style.css
context-visualizer/context_visualizer/static/js/: config.js  dashboard.js  node.js  topology.js  workers.js
context-visualizer/context_visualizer/templates/: base.html  config.html  dashboard.html  node.html  pools.html  topology.html  workers.html
docker/: deps-nvidia.Dockerfile  iowarp-base.Dockerfile
docker/clio_cte_bench/: Dockerfile  README.md  docker-compose.yml  docker-stack.yml
docker/quickstart/: chimaera.yaml  docker-compose.yml
docker/test_external/: docker-compose.yml  runtime.Dockerfile
installers/conda/: README.md  build.sh  conda_build_config.yaml  meta.yaml  recipe.yaml
(+750 files in other folders)
